--- a/templates/default.html
+++ b/templates/default.html
@@ -1,22 +1,21 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
-        <title>Jonas Westerlund — $title$</title>
-        <link rel="stylesheet" href="/css/default.css">
-    </head>
-    <body>
-        <header>
-            <p>
-                <a href="/index.html">jonas<span>westerlund</span><span>.se</span></a>
-            </p>
-        </header>
-        $body$
-
-        <footer>
-            <p>Copyright © MMXII Jonas Westerlund</p>
-        </footer>
-        <script src="/js/site.js"></script>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+    <title>Jonas Westerlund — $title$</title>
+    <link rel="stylesheet" href="/css/default.css">
+  </head>
+  <body>
+    <header>
+      <p>
+        <a href="/index.html">jonas<span>westerlund</span><span>.se</span></a>
+      </p>
+    </header>
+    $body$
+    <footer>
+      <p>Copyright © MMXII Jonas Westerlund — <a href="https://github.com/nlogax/home">source code available here</a></p>
+    </footer>
+    <script src="/js/site.js"></script>
+  </body>
 </html>
