--- a/templates/default.html
+++ b/templates/default.html
@@ -14,7 +14,7 @@
     </header>
     $body$
     <footer>
-      <p>Copyright © MMXII Jonas Westerlund — <a href="https://github.com/nlogax/home">source code available here</a></p>
+      <p><a href="http://creativecommons.org/licenses/by/3.0/">CC BY</a> Jonas Westerlund — <a href="https://github.com/nlogax/home">source code available here</a></p>
     </footer>
     <script src="/js/site.js"></script>
   </body>
