--- a/templates/default.html
+++ b/templates/default.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
-    <meta name="keywords" content="goobagangus">
-    <title>Jonas Westerlund — $title$</title>
     <link rel="stylesheet" href="/css/default.css">
+    <link rel="alternate" type="application/rss+xml" title="Jonas Westerlund’s blog" href="/rss.xml">
+    <title>$title$ — Jonas Westerlund</title>
   </head>
   <body>
     <header>
+      <h1 style="position:absolute;top:-100%">Goobagangus</h1>
       <p>
         <a href="/index.html">jonas<span>westerlund</span><span>.se</span></a>
       </p>
