--- a/templates/default.html
+++ b/templates/default.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
     <link rel="stylesheet" href="/css/default.css">
     <link rel="alternate" type="application/rss+xml" title="Jonas Westerlund’s blog" href="/rss.xml">
+    <script src="/js/site.js" defer></script>
     <title>$title$ — Jonas Westerlund</title>
   </head>
   <body>
@@ -18,6 +19,5 @@
     <footer>
       <p><a href="http://creativecommons.org/licenses/by/3.0/">CC BY</a> Jonas Westerlund — <a href="https://github.com/nlogax/home">source code available here</a></p>
     </footer>
-    <script src="/js/site.js"></script>
   </body>
 </html>
