Update HTML templates

--- a/templates/postitem.html
+++ b/templates/postitem.html
@@ -3,6 +3,6 @@
     <a href="$url$">$title$</a>
   </h2>
   <p class="meta">
-    Posted <time datetime="$isoDate$">$date$</time> in $prettytags$
+    Published <time datetime="$isoDate$" title="$date$">$date$</time> in $prettytags$
   </p>
 </li>
