--- a/templates/postmeta.html
+++ b/templates/postmeta.html
@@ -1,4 +1,4 @@
 $body$
 <p class="meta">
-  Published <time datetime="$isoDate$" title="$date$">$date$</time> in $prettytags$
+  Published <time datetime="$isoDate$" title="$date$">$date$</time> in $tags$
 </p>
