--- a/templates/postitem.html
+++ b/templates/postitem.html
@@ -2,7 +2,6 @@
   <h2>
     <a href="$url$">$title$</a>
   </h2>
-  <p class="meta">
-    Published <time datetime="$isoDate$" title="$date$">$date$</time> in $tags$
-  </p>
+  <p>$description$</p>
+  $partial("templates/postmeta.html")$
 </li>
