--- a/templates/postmeta.html
+++ b/templates/postmeta.html
@@ -1,4 +1,7 @@
-$body$
+<ul class="tags">
+  $tags$
+</ul>
+
 <p class="meta">
-  Published <time datetime="$isoDate$" title="$date$">$date$</time> in $tags$
+  Published <time datetime="$isoDate$">$date$</time>
 </p>
