--- a/templates/default.html
+++ b/templates/default.html
@@ -1,20 +1,27 @@
 <!doctype html>
+
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 <meta charset="utf-8">
-<link rel="alternate" type="application/rss+xml" title="Jonas Westerlund’s blog" href="/rss.xml">
+
+<link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
 <title>$title$</title>
+
 <style>
   $partial("css/default.css")$
 </style>
+
 <header>
   <p>
     <a href="/index.html">jonas<span>westerlund</span><span>.se</span></a>
   </p>
 </header>
+
 $body$
+
 <footer>
   <p><a href="http://creativecommons.org/licenses/by/3.0/">CC BY</a> Jonas Westerlund — <a href="https://github.com/nlogax/home">source code</a></p>
 </footer>
+
 <script>
   $partial("js/site.js")$
   $partial("js/analytics.js")$
