Add GitHub links to posts
Update post metadata

--- a/templates/post.html
+++ b/templates/post.html
@@ -2,6 +2,7 @@
   <article>
     <h1>$title$</h1>
     $body$
+    <p>If you want to update this post, send a <a href="https://github.com/nlogax/home/blob/master/$path$">pull request</a>.</p>
   </article>
   $partial("templates/postmeta.html")$
 </section>
