--- a/templates/default.html
+++ b/templates/default.html
@@ -1,8 +1,7 @@
 <!doctype html>
 
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 <meta charset="utf-8">
-
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
 <title>$title$</title>
 
@@ -19,7 +18,9 @@
 $body$
 
 <footer>
-  <p><a href="http://creativecommons.org/licenses/by/3.0/">CC BY</a> Jonas Westerlund — <a href="https://github.com/nlogax/home">source code</a></p>
+  <p>
+    <a href="https://creativecommons.org/licenses/by/3.0/">CC BY</a> Jonas Westerlund — <a href="https://github.com/nlogax/home">source code</a>
+  </p>
 </footer>
 
 <script>
