--- a/templates/post.html
+++ b/templates/post.html
@@ -2,17 +2,19 @@
   <article>
     <h1>$title$</h1>
     $body$
-    <p>If you want to update this post, send a <a href="https://github.com/nlogax/home/blob/master/$path$">pull request</a>.</p>
+    <p class="pull-request">
+      If you want to update this post, <a href="https://github.com/nlogax/home/blob/master/$path$">send a pull request</a>
+    </p>
   </article>
   $partial("templates/postmeta.html")$
 </section>
 
 <section id="disqus_thread">
   <noscript>
-    Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+    Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus</a>.
   </noscript>
   <p>
-    <a href="http://disqus.com" class="dsq-brlink">Comments powered by <span class="logo-disqus">Disqus</span></a>
+    <a href="https://disqus.com" class="dsq-brlink">Comments powered by <span class="logo-disqus">Disqus</span></a>
   </p>
 </section>
 
