--- a/templates/postmeta.html
+++ b/templates/postmeta.html
@@ -3,5 +3,5 @@
 </ul>
 
 <p class="meta">
-  Published <time datetime="$isoDate$">$date$</time>
+  Posted <time datetime="$isoDate$">$date$</time> by $author$
 </p>
