--- a/css/default.css
+++ b/css/default.css
@@ -68,13 +68,11 @@ a:hover {
 }
 
 header {
-  height: 25px;
   padding: 25px;
 }
 
   header p {
-    display: inline-block;
-    margin: 0;
+    margin-top: 0;
   }
 
 section {
@@ -91,29 +89,25 @@ footer {
   right: 0;
 }
 
-  footer p:last-child { margin: 0; }
+  footer p {
+    margin: 0;
+  }
 
     footer p a {
       color: inherit;
     }
 
-    footer p a:hover {
-    }
-
 code {
   background-color: #f2f2f2;
   padding: 0 3px;
-}
-
-pre {
   white-space: pre-wrap;
 }
 
-  pre code {
-    display: block;
-    line-height: 20px;
-    outline: 10px solid #f2f2f2;
-  }
+pre code {
+  display: block;
+  line-height: 20px;
+  outline: 10px solid #f2f2f2;
+}
 
 .posts > li {
   margin-bottom: 25px;
@@ -191,7 +185,7 @@ article {
 
 .pull-request {
   color: #666;
-  margin-top: 75px;
+  margin: 75px 0 0;
   text-align: right;
 }
 
