--- a/templates/default.html
+++ b/templates/default.html
@@ -1,7 +1,8 @@
-<!doctype html>
+<!--UNCOMPRESSED-->
 
+<!doctype html>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=0.48, minimum-scale=0.48">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
 <title>$title$</title>
 
@@ -11,7 +12,7 @@
 
 <header>
   <p>
-    <a href="/index.html">jonas<span>westerlund</span><span>.se</span></a>
+    <a href="/">jonaswesterlund.se</a>
   </p>
 </header>
 
@@ -19,11 +20,10 @@ $body$
 
 <footer>
   <p>
-    <a href="https://creativecommons.org/licenses/by/3.0/">CC BY</a> Jonas Westerlund — <a href="https://github.com/nlogax/home">source code</a>
+    <a href="https://creativecommons.org/licenses/by/3.0/">CC BY</a> Jonas Westerlund—<a href="https://github.com/nlogax/home">source code available on GitHub</a>
   </p>
 </footer>
 
 <script>
   $partial("js/site.js")$
-  $partial("js/analytics.js")$
 </script>
