--- a/templates/postmeta.html
+++ b/templates/postmeta.html
@@ -1,7 +1,4 @@
-<ul class="tags">
-  $tags$
-</ul>
-
 <p class="meta">
-  Posted <time datetime="$isoDate$">$date$</time> by $author$
+  Published <time datetime="$isoDate$">$date$</time> by $author$
+  in $tags$
 </p>
