--- a/templates/post.html
+++ b/templates/post.html
@@ -3,21 +3,13 @@
     <h1>$title$</h1>
     $body$
     <p class="pull-request">
-      If you want to update this post, <a href="https://github.com/nlogax/home/blob/master/$path$">send a pull request</a>
+      You can update this post by <a href="https://github.com/nlogax/home/blob/master/$path$">sending a pull request</a>
     </p>
   </article>
   $partial("templates/postmeta.html")$
 </section>
 
-<section id="disqus_thread">
-  <noscript>
-    Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus</a>.
-  </noscript>
-  <p>
-    <a href="https://disqus.com" class="dsq-brlink">Comments powered by <span class="logo-disqus">Disqus</span></a>
-  </p>
-</section>
-
+<section id="disqus_thread"></section>
 <script>
   $partial("js/disqus.js")$
 </script>
