--- a/templates/postitem.html
+++ b/templates/postitem.html
@@ -1,6 +1,6 @@
 <li>
   <a href="$url$">
-    <strong>$title$.</strong> $description$
-    <span class="meta">Published <time datetime="$isoDate$">$date$</time>.</span>
+    <strong>$title$</strong>, <time datetime="$isoDate$">$date$</time>.
+    <span class="desc">$description$</span>
   </a>
 </li>
