--- a/templates/default.html
+++ b/templates/default.html
@@ -2,12 +2,12 @@
 
 <!doctype html>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=0.48, minimum-scale=0.48">
+<meta name="viewport" content="maximum-scale=1,user-scalable=0,width=device-width">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
 <title>$title$</title>
 
 <style>
-  $partial("css/default.css")$
+  $partial("css/site.css")$
 </style>
 
 <header>
