--- a/templates/postitem.html
+++ b/templates/postitem.html
@@ -1,6 +1,7 @@
 <li>
   <a href="$url$">
-    <strong>$title$</strong>, <time datetime="$isoDate$">$date$</time>.
+    <h2>$title$</h2>
     <span class="desc">$description$</span>
   </a>
+  <span class="meta">$partial("templates/postmeta.html")$</span>
 </li>
