--- a/templates/default.html
+++ b/templates/default.html
@@ -13,6 +13,7 @@
 <header>
   <p>
     <a href="/">jonaswesterlund.se</a>
+    is part of the <a href="https://miketaylr.com/posts/">Mike Taylr Dot Com Web-Ring</a>
   </p>
 </header>
 
